2006-09-29  Benjamin Berg  <benjamin@sipsolutions.net>

	* MAINTAINERS:
	- Add myself
	- Industrial and Smooth are maintained in gtk-engines

	* configure.ac:
	- Do not use "echo -e" as some shells don't implement this

2006-09-07  Thomas Wood  <thos@gnome.org>

	* NEWS: BROWN PAPER BAG PLEASE

2006-09-04  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Updated for 2.8.0 release

	* engines/crux/src/crux-draw.c: (draw_handle): Fix grip position
	* themes/Crux/gtk-2.0/gtkrc: Make sure icons are 22x22 in toolbars etc
	* themes/Mist/gtk-2.0/gtkrc: Use new Tango blue as "hilight" colour


2006-09-04  Thomas Wood  <thos@gnome.org>

	reviewed by: <delete if not using a buddy>

	* NEWS:
	* configure.ac:
	* themes/Mist/gtk-2.0/gtkrc:

2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/clearlooks/src/clearlooks_style.c:
	* engines/glide/src/glide_gtk2_drawing.c:
	* engines/industrial/src/industrial_style.c:
	* engines/redmond/src/redmond_gtk2_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	* engines/support/widget-information.h:
	* engines/thinice/src/thinice_theme_draw.c:

	- Add GE_WIDGET_HAS_DEFAULT to check for valid widget first

2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_misc.c:

	- Add some missing null widget checks
	
2006-09-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	- Fix up the configure script
	- Remove the --disable-theme option

2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>

	* configure.ac:
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/support.h:
	* engines/crux/Makefile.am:
	* engines/crux/src/crux-draw.c:
	* engines/glide/Makefile.am:
	* engines/hc/Makefile.am:
	* engines/hc/src/hc-style.c: 
	* engines/industrial/Makefile.am: